--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -19,6 +19,13 @@
               <button type="submit" class="waves-effect waves-light btn">Shorten URL</button>
             </div>
           </div>
+          <div class="row">
+            <div class="col offset-m2">
+              <% if flash[:errors].present? %>
+                <p class="text-error"><%= flash[:errors] %></p>
+              <% end %>
+            </div>
+          </div>
         </div>
       </div>
     <% end %>
@@ -37,10 +44,10 @@
   <tbody>
     <% @urls.each do |url| %>
       <tr>
-        <th scope="row"><a href="http://127.0.0.1:3002/ABCDE">http://127.0.0.1:3002/ABCDE</a></th>
-        <td><a href="https://drive.google.com/file/d/1VdLgSSMojWFb1GRoBAFX_eXy7oX2J">drive.google.com/file/d/1VdLgSS...</a></td>
-        <td><!-- Please match the same format -->Feb 24, 2021</td>
-        <td><%= (0..10).to_a.sample %></td>
+        <th scope="row"><a href=<%="http://127.0.0.1:3000/" + url.short_url%>><%='http://127.0.0.1:3000/' + url.short_url%></a></th>
+        <td><a href="https://drive.google.com/file/d/1VdLgSSMojWFb1GRoBAFX_eXy7oX2J"><%=url.original_url%></a></td>
+        <td><!-- Please match the same format Feb 24, 2021 --><%=url.created_at%></td>
+        <td id="clicks"><%= url.clicks.count %></td>
         <td>
           <a href="<%= url_path(url.short_url) %>">
             <svg class="octicon octicon-graph" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
